# coraza-server-docker

./: Dockerfile.ok  config.yml  go.mod  go.mod.ref  go.sum  main.go
example/: docker-compose.yml
example/haproxy/: haproxy.cfg  spoe.cfg
load/: doit.py  pyproject.toml  unpatched_00000  unpatched_10000
